<resources>
    <string name="app_name">To-Do List</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_what_is_your_task">What Task do you want to perform?</string>
    <string name="ed_your_task">Your Task....</string>
    <string name="tv_due_date_time">Date/Time Created :</string>
    <string name="ed_date_not_set">Date not set…</string>
    <string name="ed_time_not_set">Time not set…</string>
    <string name="yes_check_content_description">Click the Checkmark to create your new Task.</string>
    <string name="task_add_toast">Task has been Successfully added!</string>
    <string name="task_update_toast">Task has been Successfully updated!</string>
    <string name="no_task_add_toast">Please fill out all the fields</string>
    <string name="tvTaskTitle">Task Title</string>
    <string name="tvTaskDate">Task Date</string>
    <string name="tvTaskTime">Task Time</string>
    <string name="delete_all_completed_tasks">Delete all Completed tasks</string>
    <string name="delete_all_tasks">Delete all tasks</string>
    <string name="todo_search">Search</string>
    <string name="todo_sort">Sort</string>
    <string name="sort_by_name_text">Sort by name</string>
    <string name="sort_by_date_text">Sort by date created</string>
    <string name="hide_completed">Hide Completed</string>
    <string name="set_reminder">Set reminder</string>
    <string name="today_at_12_00">Today at 12:00</string>
    <string name="created">Created:</string>
    <string name="comma">,</string>
    <string name="tv_set_reminder">Set reminder</string>
    <string name="delete">Delete</string>
    <string name="edit_task">Edit Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="no_tasks">No Tasks</string>
    <string name="no_tasks_content_description">No Tasks</string>
</resources>