<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- All our menu/action items -->

    <item
        android:id="@+id/todo_search"
        android:title="@string/todo_search"
        android:icon="@drawable/ic_todo_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        app:iconTint="@android:color/white"/>

    <!-- Sub-menu for our Sort menu_item -->

    <item
        android:title= "@string/todo_sort"
        app:showAsAction="always"
        android:icon="@drawable/ic_todo_sort"
        app:iconTint="@android:color/white">

        <menu>
            <item
                android:id="@+id/sort_by_name"
                android:title="@string/sort_by_name_text" />

            <item
                android:id="@+id/sort_by_date"
                android:title="@string/sort_by_date_text"/>

        </menu>
    </item>

    <item
        android:id="@+id/todo_hide_completed"
        android:checkable="true"
        android:title="@string/hide_completed"
        app:showAsAction="never"/>

    <item
        android:id="@+id/del_selected_tasks"
        android:title="@string/delete_all_selected_tasks"
        app:showAsAction="never" />

    <item
        android:id="@+id/del_all_tasks"
        android:title="@string/delete_all_tasks"
        app:showAsAction="never" />
</menu>