<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".fragments.add.AddFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/tv_what_is_your_task"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edTaskTitle"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/ed_your_task"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/tv_due_date_time"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTaskTitle" />

    <TextView
        android:id="@+id/edDate"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="?attr/editTextBackground"
        android:ems="10"
        android:focusable="true"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/ed_date_not_set"
        android:textAppearance="?android:attr/textAppearanceMediumInverse"
        android:textColor="?attr/editTextColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/edTime"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="26dp"
        android:background="?attr/editTextBackground"
        android:ems="10"
        android:focusable="true"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/ed_time_not_set"
        android:minHeight="48dp"
        android:textAppearance="?android:attr/textAppearanceMediumInverse"
        android:textColor="?attr/editTextColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edDate" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ab_checkYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/yes_check_content_description"
        android:focusable="true"
        android:src="@drawable/ic_check_yes"
        app:backgroundTint="@color/holo_light_blue_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@android:color/white" />

    <TextView
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_reminder"
        android:drawablePadding="3dp"
        android:padding="8dp"
        android:text="Set reminder"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:drawableStartCompat="@drawable/ic_alarm_icon"
        app:drawableTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTime" />

</androidx.constraintlayout.widget.ConstraintLayout>