<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp"
    android:paddingStart="16sp"
    android:paddingTop="16sp"
    android:paddingBottom="16sp"
    android:paddingEnd="2sp">

    <TextView
        android:id="@+id/tvTaskTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tvTaskTitle"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/cbTask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTaskDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tvTaskDate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTaskTitle" />

        <TextView
        android:id="@+id/tvTaskTime"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvTaskTime"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvTaskDate"
        app:layout_constraintTop_toBottomOf="@+id/tvTaskTitle" />

    <CheckBox
        android:id="@+id/cbTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:buttonTint="@android:color/holo_blue_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="8dp"
        android:text="@string/am"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvTaskTime"
        app:layout_constraintTop_toBottomOf="@+id/tvTaskTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>